  ``gt``, ``ge``. (`#665`_)
- ``import`` statement cannot end with a trailing comma. (`#617`_, `#618`_)
- ``indent`` filter will not indent blank lines by default. (`#685`_)
- Add ``reverse`` argument for ``dictsort`` filter. (`#692`_)
- Add a ``NativeEnvironment`` that renders templates to native Python types
  instead of strings. (`#708`_)

.. _#469: https://github.com/pallets/jinja/pull/469
.. _#475: https://github.com/pallets/jinja/pull/475
.. _#478: https://github.com/pallets/jinja/pull/478
.. _#617: https://github.com/pallets/jinja/pull/617
.. _#618: https://github.com/pallets/jinja/pull/618
.. _#665: https://github.com/pallets/jinja/pull/665
.. _#685: https://github.com/pallets/jinja/pull/685
.. _#692: https://github.com/pallets/jinja/pull/692
.. _#708: https://github.com/pallets/jinja/pull/708

Version 2.9.7
-------------

(bugfix release, in development)

- ``tojson`` filter marks output as safe to match documented behavior.
  (`#718`_)
- Resolved a bug where getting debug locals for tracebacks could
  modify template context.
- Fixed a bug where having many `{% elif ... %}` blocks resulted in a
  "too many levels of indentation" error.  These blocks now compile to
  native `elif ..:` instead of `else: if ..:`  (#759)

.. _#718: https://github.com/pallets/jinja/pull/718

Version 2.9.6
-------------
(bugfix release, released on April 3rd 2017)

- Fixed custom context behavior in fast resolve mode (#675)

Version 2.9.5
-------------
(bugfix release, released on January 28th 2017)

- Restored the original repr of the internal `_GroupTuple` because this
  caused issues with ansible and it was an unintended change.  (#654)
- Added back support for custom contexts that override the old `resolve`
  method since it was hard for people to spot that this could cause a
  regression.
- Correctly use the buffer for the else block of for loops.  This caused
  invalid syntax errors to be caused on 2.x and completely wrong behavior
  on Python 3 (#669)