@@ -453,6 +453,33 @@ class TestSet(object):
                                     '{{ ns.a }}|{{ ns.b }}')
         assert tmpl.render() == '13|37'
 
+    def test_block_escaping_filtered(self):
+        env = Environment(autoescape=True)
+        tmpl = env.from_string('{% set foo | trim %}<em>{{ test }}</em>    '
+                               '{% endset %}foo: {{ foo }}')
+        assert tmpl.render(test='<unsafe>') == 'foo: <em>&lt;unsafe&gt;</em>'
+
+    def test_block_filtered(self, env_trim):
+        tmpl = env_trim.from_string(
+            '{% set foo | trim | length | string %} 42    {% endset %}'
+            '{{ foo }}')
+        assert tmpl.render() == '2'
+        assert tmpl.module.foo == u'2'
+
+    def test_block_filtered_set(self, env_trim):
+        def _myfilter(val, arg):
+            assert arg == ' xxx '
+            return val
+        env_trim.filters['myfilter'] = _myfilter
+        tmpl = env_trim.from_string(
+            '{% set a = " xxx " %}'
+            '{% set foo | myfilter(a) | trim | length | string %}'
+            ' {% set b = " yy " %} 42 {{ a }}{{ b }}   '
+            '{% endset %}'
+            '{{ foo }}')
+        assert tmpl.render() == '11'
+        assert tmpl.module.foo == u'11'
+
 
 @pytest.mark.core_tags
 @pytest.mark.with_
